summative.moria.Moria.scala.code
var x = getDirection()
setDirection(NORTH);
println(x)
while(!isOverBaggle) {
  forward();
}